Edited for the right roles.

--- a/site.yml
+++ b/site.yml
@@ -1,12 +1,11 @@
 ---
 - name: Install Docker
-  hosts: prod #ota #prod
+  hosts: ota #ota #prod
   gather_facts: yes
   become: yes
   roles:
-    - ansible_role_install_docker_engine_ubuntu
-    #- ansible_role_install_official_lumc_fair_data_point
+    - docker-ansible
+    - FDP-ansible-role
   environment:
-    https_proxy: http://ict-lnx-upd01.ictbeheer.local:3142
-    http_proxy: http://ict-lnx-upd01.ictbeheer.local:3142
-  
+    https_proxy: http://localhost:3142
+    http_proxy: http://localhost:3142
